2004-07-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclXselect.c: undef panic on __APPLE__ (steffen)

2004-06-04  Andreas Kupries  <andreask@activestate.com>

	* generic/tclExtdInt.h: Changed when 'tclInt.h' is included. Have
	  to be done before 'tcl*Port.h', to prevent a clash over
	  'TclpPanic'. Don Porter claims that this is ok in general as
	  well. A comment in the file seems to contradict this, but the
	  compilation I tried was ok. If this becomes truly a problem then
	  we may have to refactor the TclX headers to ensure that both Tcl
	  and TclX dependencies are resolved correctly.

2004-05-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclXsocket.c (InfoGetHost): read host after arg count
	check. [Bug 930035] (teterin)

	* doc/TclX.n: doc and comment fixes
	* unix/tclXunixOS.c:
	* win/tclXwinOS.c:

2004-02-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tclXwinOS.c (TclXOSkill): close process handle

2003-04-04  Andreas Kupries  <andreask@activestate.com>

	* configure.in:
	* tclconfig/tcl.m4: Updated to newest tcl.m4, regenerated
	  configure's.

2002-12-17  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclXkeylist.c (ValidateKey): move isPath check outside
	of for loop.
	(DupKeyedListInternalRep): duplicate value object instead of
	directly incrementing refcount of existing object to stop memleak.
	(TclX_KeyedListGetKeys): simplify list result obj creation.
	(TclX_KeylkeysObjCmd): use obj-ified var set/get routines.

	* Makefile.in: add valgrind and valgrindtest targets

	* unix/INSTALL: remove references to Tk-required build

2002-11-12  Karl Lehenbauer <karl@procplace.com>

	* Makefile.in: Put some variables back in that were previously
	    found in Config.mk.  "make buildhelp" now works again.
	* configure:
	* configure.in: Moved the help dir to the top directory of the
	    TclX source code.  It was using a subdir that no longer exists.
	* unix/tools/bldmanhelp.tcl: Add "package require Tclx" and source
	    the help tools.